--- a/Ohjelmisto2_projekti/atc_web/home.html
+++ b/Ohjelmisto2_projekti/atc_web/home.html
@@ -22,6 +22,11 @@
         <button class="answer" onclick="checkAnswer(this)"></button>
         <button class="answer" onclick="checkAnswer(this)"></button>
     </div>
+
 </div>
+<div id="stats_box">
+
+    </div>
+<div id="weather_box"></div>
 </body>
 </html>
