--- a/Ohjelmisto2_projekti/atc_web/home.html
+++ b/Ohjelmisto2_projekti/atc_web/home.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 <div id="map"></div>
+<img src="icons/Air-Traveller-s-Challenge-5-12-2023.png" height="180" width="1024" id="header"/>
 <!-- <form id="single">
     <input name="icao" placeholder="Input airport icao code">
     <input type="submit" value="Search">
@@ -25,8 +26,11 @@
 
 </div>
 <div id="stats_box">
+    <p id="stats_text">STATS</p>
 
     </div>
-<div id="weather_box"></div>
+<div id="weather_box">
+    <p id="weather_text">WEATHER</p>
+</div>
 </body>
 </html>
