--- a/Ohjelmisto2_projekti/atc_web/home.html
+++ b/Ohjelmisto2_projekti/atc_web/home.html
@@ -27,10 +27,14 @@
 </div>
 <div id="stats_box">
     <p id="stats_text">STATS</p>
+    <p id="co2_used_text">CO2 USED</p>
+    <p id="points">POINTS</p>
 
     </div>
 <div id="weather_box">
     <p id="weather_text">WEATHER</p>
+    <p id="location_text">YOUR LOCATION</p>
+    <p id="location_target"></p>
 </div>
 </body>
 </html>
