--- a/Ohjelmisto2_projekti/atc_web/home.html
+++ b/Ohjelmisto2_projekti/atc_web/home.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div id="map"></div>
-<img src="icons/Air-Traveller-s-Challenge-5-12-2023.png" height="180" width="1024" id="header"/>
+<img src="icons/Air-TRAVELLER-S-CHALLENGE-5-12-2023.png" height="184" width="1024" id="header"/>
 <!-- <form id="single">
     <input name="icao" placeholder="Input airport icao code">
     <input type="submit" value="Search">
@@ -26,15 +26,11 @@
 
 </div>
 <div id="stats_box">
-    <p id="stats_text">STATS</p>
-    <p id="co2_used_text">CO2 USED</p>
-    <p id="points">POINTS</p>
+    <img id="stats_text" src="icons/Stats-5-12-2023.png"/>
 
     </div>
 <div id="weather_box">
-    <p id="weather_text">WEATHER</p>
-    <p id="location_text">YOUR LOCATION</p>
-    <p id="location_target"></p>
+    <img id="weather_text" src="icons/WEATHER-5-12-2023.png" />
 </div>
 </body>
 </html>
