--- a/Ohjelmisto2_projekti/atc_web/home.html
+++ b/Ohjelmisto2_projekti/atc_web/home.html
@@ -25,10 +25,11 @@
 <div class="sidebar">
     <div id="stats-box">
         <img id="stats-text" src="icons/Stats-5-12-2023.png"/>
-        <h3 class="stat-points">Points: <span class="stats-points-target"></span></h3>
+        <h3 class="stat-points">Points: <span class="stats-points-target">0</span></h3>
         <h3 class="stat-co2">CO2 usage: <span class="stats-co2-target">0KG</span></h3>
         <h3 class="stat-distance">Distance: <span class="stats-distance-target">0KM</span></h3>
-
+        <h3 class="stat-streak">Streak: <span class="stats-streak-target">0</span></h3>
+        
     </div>
 
     <div id="weather-box">
