--- a/Ohjelmisto2_projekti/atc_web/home.html
+++ b/Ohjelmisto2_projekti/atc_web/home.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
     <script src="app.js" defer></script>
+    <title>AIR TRAVELLER'S CHALLENGE</title>
 </head>
 <body>
 <div id="map"></div>
@@ -22,14 +23,35 @@
     </div>
 
 </div>
+
+<div id="correctAnswerAnimation" class="animation-container">
+    <img hidden src="icons/correct-answer.png" alt="correct answer text">
+    <h3 class="correct-co2"></h3>
+</div>
+
+
 <div class="sidebar">
+    <div class="scoreboard-box">
+        <table>
+            <thead>
+                <tr>
+                    <th>Rank</th>
+                    <th>Player</th>
+                    <th>CO2 Emissions</th> 
+                </tr>
+            </thead>
+            <tbody id="leaderboard-rows">
+                <!-- Leaderboard rows will be inserted here dynamically -->
+            </tbody>
+        </table>
+    </div>
+
     <div id="stats-box">
         <img id="stats-text" src="icons/Stats-5-12-2023.png"/>
         <h3 class="stat-points">Points: <span class="stats-points-target">0</span></h3>
         <h3 class="stat-co2">CO2 usage: <span class="stats-co2-target">0KG</span></h3>
         <h3 class="stat-distance">Distance: <span class="stats-distance-target">0KM</span></h3>
         <h3 class="stat-streak">Streak: <span class="stats-streak-target">0</span></h3>
-        
     </div>
 
     <div id="weather-box">
