--- a/Ohjelmisto2_projekti/atc_web/home.html
+++ b/Ohjelmisto2_projekti/atc_web/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Example</title>
+    <title>Air Travelller's Challenge</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css">
     <link rel="stylesheet" href="styles.css">
     <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
