--- a/Ohjelmisto2_projekti/atc_web/home.html
+++ b/Ohjelmisto2_projekti/atc_web/home.html
@@ -24,6 +24,14 @@
 
 </div>
 
+<form id="nameForm">
+    <label for="name">Player name:</label>
+    <br><br>
+    <input type="text" id="name" required>
+    <br><br>
+    <input id="nameButton" type="button" value="Submit">
+</form>
+
 <div id="correctAnswerAnimation" class="animation-container">
     <img hidden src="icons/correct-answer.png" alt="correct answer text">
     <h3 class="correct-co2"></h3>
