--- a/Ohjelmisto2_projekti/atc_web/home.html
+++ b/Ohjelmisto2_projekti/atc_web/home.html
@@ -38,6 +38,45 @@
         <h3 class="weather-desc"><span class="weather-desc-target"></span></h3>
         <h3 class="weather-desc"><img src="" class="weather-icon-target" alt="-" height="80px" width="80px"></h3>
     </div>
+
+    <img class="info-button" src="icons/Rules-8-12-2023.png" height="100" width=auto />
+
 </div>
+
+    <div class="popup">
+      <div class="closeButton" onclick="closePopup()">X</div>
+      <h1>Game Rules: Air Traveller's Challenge</h1>
+
+<h2>1. Objective</h2>
+<p>The goal of the game is to travel to different airports, answer questions, and earn points. The primary objective is to keep the player's carbon footprint as low as possible while progressing through the game.</p>
+
+<h2>2. Gameplay Overview</h2>
+<p><strong>Player Initialization:</strong></p>
+<ul>
+  <li>The main portion of the screen is occupied by an interactive map with airport icons.</li>
+  <li>The left side displays weather information for the current airport and the player's stats, including points, streak, and carbon dioxide emissions.</li>
+</ul>
+
+<h2>3. Gameplay Mechanics</h2>
+<p><strong>Flying:</strong></p>
+<ul>
+  <li>The player can choose to fly to a new destination by selecting the corresponding option.</li>
+  <li>Each airport visit increases the player's carbon footprint.</li>
+</ul>
+
+<p><strong>Answering Questions:</strong></p>
+<ul>
+  <li>Players have the choice to respond to questions at every airport.</li>
+  <li>Getting answers right will add points to your score, but incorrect ones will lead to a deduction of points.</li>
+  <li>At every fifth consecutive correct answer streak, there will be a 20% deduction applied to your accumulated carbon footprint.</li>
+</ul>
+
+<p>The goal is to reach 1000 points to win the game.</p>
+
+<h2>4. Winning the Game</h2>
+<p>The player wins by accumulating 1000 points while managing carbon footprint, and strategically answering questions. The game aims to entertain and raise awareness of the environmental impact of flying.</p>
+
+    </div>
+
 </body>
 </html>
