--- a/Ohjelmisto2_projekti/atc_web/home.html
+++ b/Ohjelmisto2_projekti/atc_web/home.html
@@ -68,13 +68,13 @@
         <h3 class="weather-desc"><img src="" class="weather-icon-target" alt="-" height="80px" width="80px"></h3>
     </div>
 
-    <img class="info-button" src="icons/Rules-8-12-2023.png" height="100" width=auto />
+    <img class ="info-button" src="icons/Rules-8-12-2023.png" height="90"/ >
 
 </div>
 
-    <div class="popup">
-      <div class="closeButton" onclick="closePopup()">X</div>
-      <h1>Game Rules: Air Traveller's Challenge</h1>
+<div class="popup">
+  <div id="closeButton" onclick="closePopup()">X</div>
+  <p><h1>Game Rules: Air Traveller's Challenge</h1>
 
 <h2>1. Objective</h2>
 <p>The goal of the game is to travel to different airports, answer questions, and earn points. The primary objective is to keep the player's carbon footprint as low as possible while progressing through the game.</p>
@@ -104,8 +104,8 @@
 
 <h2>4. Winning the Game</h2>
 <p>The player wins by accumulating 1000 points while managing carbon footprint, and strategically answering questions. The game aims to entertain and raise awareness of the environmental impact of flying.</p>
-
-    </div>
+</p>
+</div>
 
 </body>
 </html>
