--- a/Ohjelmisto2_projekti/atc_web/home.html
+++ b/Ohjelmisto2_projekti/atc_web/home.html
@@ -21,7 +21,6 @@
         <button class="answer" onclick="checkAnswer(this)"></button>
         <button class="answer" onclick="checkAnswer(this)"></button>
     </div>
-
 </div>
 
 <form id="nameForm">
@@ -36,7 +35,6 @@
     <img hidden src="icons/correct-answer.png" alt="correct answer text">
     <h3 class="correct-co2"></h3>
 </div>
-
 
 <div class="sidebar">
     <div class="scoreboard-box">
@@ -68,7 +66,10 @@
         <h3 class="weather-desc"><img src="" class="weather-icon-target" alt="-" height="80px" width="80px"></h3>
     </div>
 
-    <img class ="info-button" src="icons/Rules-8-12-2023.png" height="90"/ >
+    <div id="info-box">
+        <img class ="info-button" src="icons/Rules-8-12-2023.png" height="90">
+    </div>
+
 
 </div>
 
