--- a/Ohjelmisto2_projekti/atc_web/home.html
+++ b/Ohjelmisto2_projekti/atc_web/home.html
@@ -2,15 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Air Travelller's Challenge</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css">
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="./styles/scoreboard.css">
-    <link rel="stylesheet" href="./styles/answer.css">
+    <link rel="stylesheet" href="./styles/question.css">
     <link rel="stylesheet" href="./styles/siderbar.css">
     <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
     <script src="app.js" defer></script>
-    <title>AIR TRAVELLER'S CHALLENGE</title>
+    <title>Air Traveller's Challenge</title>
 </head>
 <body>
 <div id="map"></div>
